// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditCard Snapshots and Rendering matches snapshot when editing 1`] = `
Array [
  .c0 {
  position: fixed;
  right: 2rem;
  z-index: 40;
  display: grid;
  justify-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 1vh;
}

.c1.c1.c1 {
  z-index: 131;
}

<div
    aria-live="polite"
    className="c0 c1"
  />,
  <div
    aria-label="Edit highlighted note"
    className="edit-card "
    role="dialog"
  >
    <div
      className="hidden-on-mobile"
    >
      <form
        data-analytics-region="edit-note"
        data-highlight-card={true}
      >
        <div>
          <div
            data-props={
              Object {
                "color": undefined,
                "onChange": [Function],
                "onRemove": null,
              }
            }
            mock-color-picker="true"
          />
          <div
            data-props={
              Object {
                "edit": false,
                "note": "asdf",
                "onChange": [Function],
                "onFocus": [Function],
                "textareaRef": Object {
                  "current": null,
                },
              }
            }
            mock-note="true"
          />
          <div
            className="button-group"
          >
            <button
              className="button button-primary button-small"
              data-analytics-label="save"
              data-testid="save"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "--button-default-active": "#e5e5e5",
                  "--button-default-border": "#d5d5d5",
                  "--button-default-color": "#fff",
                  "--button-default-foreground": "#5e6062",
                  "--button-default-hover": "#fafafa",
                  "--button-disabled-color": "#f1f1f1",
                  "--button-disabled-foreground": "#c1c1c1",
                  "--button-focus-outline": "#fff",
                  "--button-focus-shadow": "#000",
                  "--button-primary-active": "#b03808",
                  "--button-primary-color": "#d4450c",
                  "--button-primary-foreground": "#fff",
                  "--button-primary-hover": "#be3c08",
                  "--button-secondary-active": "#818181",
                  "--button-secondary-color": "#949494",
                  "--button-secondary-foreground": "#fff",
                  "--button-secondary-hover": "#8b8b8b",
                  "--button-transparent-color": "#027EB5",
                }
              }
            >
              Save
            </button>
            <button
              className="button button-default button-small"
              data-analytics-label="cancel"
              data-testid="cancel"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "--button-default-active": "#e5e5e5",
                  "--button-default-border": "#d5d5d5",
                  "--button-default-color": "#fff",
                  "--button-default-foreground": "#5e6062",
                  "--button-default-hover": "#fafafa",
                  "--button-disabled-color": "#f1f1f1",
                  "--button-disabled-foreground": "#c1c1c1",
                  "--button-focus-outline": "#fff",
                  "--button-focus-shadow": "#000",
                  "--button-primary-active": "#b03808",
                  "--button-primary-color": "#d4450c",
                  "--button-primary-foreground": "#fff",
                  "--button-primary-hover": "#be3c08",
                  "--button-secondary-active": "#818181",
                  "--button-secondary-color": "#949494",
                  "--button-secondary-foreground": "#fff",
                  "--button-secondary-hover": "#8b8b8b",
                  "--button-transparent-color": "#027EB5",
                }
              }
            >
              Cancel
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>,
]
`;

exports[`EditCard Snapshots and Rendering matches snapshot when focused 1`] = `
<div
  aria-label="Edit highlighted note"
  className="edit-card "
  role="dialog"
>
  <div
    data-props={
      Object {
        "confirmLink": "/accounts/login?r=/",
        "confirmMessage": "i18n:highlighting:login:link",
        "data-analytics-label": "login",
        "data-analytics-region": "highlighting-login",
        "drawFocus": false,
        "message": "i18n:highlighting:login:prompt",
        "onCancel": [Function],
      }
    }
    mock-confirmation="true"
  />
</div>
`;

exports[`EditCard Snapshots and Rendering matches snapshot with data for authenticated user 1`] = `
Array [
  .c0 {
  position: fixed;
  right: 2rem;
  z-index: 40;
  display: grid;
  justify-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 1vh;
}

.c1.c1.c1 {
  z-index: 131;
}

<div
    aria-live="polite"
    className="c0 c1"
  />,
  <div
    aria-label="Edit highlighted note"
    className="edit-card "
    role="dialog"
  >
    <div
      className="hidden-on-mobile"
    >
      <form
        data-analytics-region="edit-note"
        data-highlight-card={true}
      >
        <div>
          <div
            data-props={
              Object {
                "color": undefined,
                "onChange": [Function],
                "onRemove": null,
              }
            }
            mock-color-picker="true"
          />
          <div
            data-props={
              Object {
                "edit": false,
                "note": "",
                "onChange": [Function],
                "onFocus": [Function],
                "textareaRef": Object {
                  "current": null,
                },
              }
            }
            mock-note="true"
          />
        </div>
      </form>
    </div>
  </div>,
]
`;

exports[`EditCard Snapshots and Rendering matches snapshot without data 1`] = `
<div
  aria-label="Edit highlighted note"
  className="edit-card "
  role="dialog"
>
  <div
    data-props={
      Object {
        "confirmLink": "/accounts/login?r=/",
        "confirmMessage": "i18n:highlighting:login:link",
        "data-analytics-label": "login",
        "data-analytics-region": "highlighting-login",
        "drawFocus": false,
        "message": "i18n:highlighting:login:prompt",
        "onCancel": [Function],
      }
    }
    mock-confirmation="true"
  />
</div>
`;
